--- a/index.html
+++ b/index.html
@@ -369,15 +369,21 @@
                     Fuga sed itaque ducimus maxime facere nihil expedita non sunt? Nostrum, voluptatem?
                 </p>
                 <form action="">
-                    <input type="email" placeholder="please enter your email" class="email">
+					<div>
+					<label for="email" class="mail">E-mail </label>
+					<div class="mailbox">
+                    <input type="email" placeholder="please enter your email" class="email" id="email">
                     <input type="submit" value="save" class="btn">
+					</div>
+					</div>
                 </form>
             </div>
+			<script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=iidhmj3y&n=n1.ratufa.io"></script>
         </section>
         <!--end news-->
         <section class="cridet" id="cridet">
             <div class="box">
-                <h3>Created by Dhanush</h3>
+                <h3>all reserved by codeskill</h3>
             </div>
         </section>
     </body>
