--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <!--end news-->
         <section class="cridet" id="cridet">
             <div class="box">
-                <h3>all reserved by codeskill</h3>
+                <h3>Created by Dhanush </h3>
             </div>
         </section>
     </body>
